[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" uid="uid://b0mjqgqnebyxk" path="res://demo/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.18, 0.22, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleSection" type="VBoxContainer" parent="CenterContainer/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/MainVBox/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 42
text = "üè• Radiology Training System"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/MainVBox/TitleSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Interactive Medical Imaging Education"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/MainVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="WelcomePanel" type="PanelContainer" parent="CenterContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WelcomeVBox" type="VBoxContainer" parent="CenterContainer/MainVBox/WelcomePanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="WelcomeTitle" type="Label" parent="CenterContainer/MainVBox/WelcomePanel/WelcomeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Welcome!"
horizontal_alignment = 1

[node name="WelcomeText" type="Label" parent="CenterContainer/MainVBox/WelcomePanel/WelcomeVBox"]
layout_mode = 2
text = "This training system helps medical students and professionals
practice reading and analyzing DICOM medical images.

Browse curated cases or create your own study sets
with annotations and teaching points."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="CenterContainer/MainVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CasesButton" type="Button" parent="CenterContainer/MainVBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "üìÅ Browse and Create Cases"

[node name="Spacer3" type="Control" parent="CenterContainer/MainVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ContactPanel" type="PanelContainer" parent="CenterContainer/MainVBox"]
layout_mode = 2

[node name="ContactVBox" type="VBoxContainer" parent="CenterContainer/MainVBox/ContactPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContactTitle" type="Label" parent="CenterContainer/MainVBox/ContactPanel/ContactVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Contact Information"
horizontal_alignment = 1

[node name="ContactName" type="Label" parent="CenterContainer/MainVBox/ContactPanel/ContactVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Luis Gago"
horizontal_alignment = 1

[node name="ContactEmail" type="Label" parent="CenterContainer/MainVBox/ContactPanel/ContactVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
text = "lgago@umich.edu"
horizontal_alignment = 1

[node name="XRayDecorations" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopLeftXRay" type="Label" parent="XRayDecorations"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.3, 0.3, 0.4, 0.3)
theme_override_font_sizes/font_size = 80
text = "ü¶¥"

[node name="TopRightXRay" type="Label" parent="XRayDecorations"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 150.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.3, 0.3, 0.4, 0.3)
theme_override_font_sizes/font_size = 80
text = "ü´Å"

[node name="BottomLeftXRay" type="Label" parent="XRayDecorations"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 0.3, 0.4, 0.3)
theme_override_font_sizes/font_size = 80
text = "üß†"

[node name="BottomRightXRay" type="Label" parent="XRayDecorations"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.3, 0.3, 0.4, 0.3)
theme_override_font_sizes/font_size = 80
text = "‚ù§Ô∏è"

[connection signal="pressed" from="CenterContainer/MainVBox/CasesButton" to="." method="_on_cases_button_pressed"]
